--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terminal Portfolio</title>
+    <!-- Link to external CSS file -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Background Elements -->
     <div class="background">
         <div class="gradient"></div>
         <div class="blob"></div>
     </div>
-    
+
+    <!-- Terminal Container -->
     <div class="terminal-container">
         <div class="terminal-header">
             <div class="terminal-tab">
@@ -30,6 +33,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script> 
+    <!-- Link to external JavaScript file -->
+    <script src="script.js"></script>
 </body>
 </html>
